--- a/WWW/intro.tex
+++ b/WWW/intro.tex
@@ -39,7 +39,7 @@ that clients request; and (3)~the identity of clients that request it. We call t
 are encrypted with a key that is shared by an OCDN exit proxy and the origin server
 that publishes content to cache nodes, but is not known to any of the CDN
 cache nodes. To do so, the origin server publishes encrypted content, 
-which the CDN cache nodes subsequently serve through one or more proxies that are responsible for routing requests for objects corresponding to that URL.  A client forwards a request for content through multiple OCDN proxies such that the CDN is unable to know the client identity or the requested content. Using \system{} requires only minimal modification to existing clients; clients can also configure aspects of the system to trade off performance for privacy.
+which the CDN cache nodes subsequently serve through one or more exit proxies that are responsible for routing requests for objects corresponding to that URL.  A client forwards a request for content through OCDN exit proxies such that the CDN is unable to know the client identity or the requested content. Using \system{} requires only minimal modification to existing clients; clients can also configure aspects of the system to trade off performance for privacy.
 
 Ensuring that the CDN operator never learns information about either (1)~what
 content is being stored on its cache nodes or (2)~which objects individual
@@ -57,7 +57,7 @@ multiple such capabilities. Our threat model does not include active attempts
 to disrupt the system (\eg, blocking access to parts of the system, mounting
 denial of service attacks), but it includes any type of attack
 that involves observing traffic and even directly interacting with the system
-as a client, proxy, or publisher.
+as a client, exit proxy, or publisher.
 
 %The design of \system{} (Section~\ref{sec:design}) under such a strong attack
 %model entails many unique aspects and features. Because the system allows any
