--- a/WWW/main.tex
+++ b/WWW/main.tex
@@ -59,7 +59,7 @@
 
   \input{abstract}
 
-  \keywords{privacy, content delivery networks}
+  %\keywords{privacy, content delivery networks}
 
  
 
@@ -70,8 +70,8 @@
 \input{design}
 \input{protocol}
 \input{implementation}
-\input{security}
 \input{performance}
+\input{security}
 \input{discussion}
 \input{related_work}
 \input{conclusion}
