--- a/WWW/security.tex
+++ b/WWW/security.tex
@@ -11,13 +11,13 @@ systems.
 \centering
 \begin{tabular}{| l | c | c | c |} 
 \hline
- {} & Preserves  & Preserves   & Protects \\ 
- {} & Integrity & Confidentiality & Client\\
- {} & at CDN & at CDN & Identity \\
+ {} & Preserves  & Protects & Preserves \\ 
+ {} & Integrity & Client & Confidentiality \\
+ {} & at CDN & Identity & at CDN \\
 \hline
  Stickler~\cite{levy2015stickler} & \checkmark & {} & {}\\ 
  R \& C~\cite{michalakis2007ensuring} & \checkmark & {} & {}\\
- Tor~\cite{dingledine2004tor} & {} & {} & \checkmark \\
+ Tor~\cite{dingledine2004tor} & {} & \checkmark & {} \\
  {\bf OCDN} & {} & {\bf \checkmark} & {\bf \checkmark} \\
 \hline
 \end{tabular}
