cut down conclusion, related work, updated figures 2 and 5

--- a/WWW/design.tex
+++ b/WWW/design.tex
@@ -13,7 +13,7 @@ We separate design decisions into two parts: 1)~hiding content and 2)~hiding cli
 
 \begin{figure}[t!]
 \centering
-\includegraphics[width=.44\textwidth]{ocdn_overview_new2}
+\includegraphics[width=.44\textwidth]{ocdn_overview_updated}
 \caption{The relationships between clients, exit proxies, CDNs, and origin servers in 
 \system{}.}
 \label{fig:ocd_overview}
