--- a/WWW/related_work.tex
+++ b/WWW/related_work.tex
@@ -1,8 +1,8 @@
 \section{Related Work}
 \label{sec:related}
 
-To our knowledge, there has been no prior work on preventing surveillance at CDNs, but there 
-has been relevant research on securing CDNs and finding security vulnerabilities in CDNs.
+%To our knowledge, there has been no prior work on preventing surveillance at CDNs, but there 
+%has been relevant research on securing CDNs and finding security vulnerabilities in CDNs.
 
 \textbf{Securing CDNs.} Most prior work on securing CDNs has focused on providing content 
 integrity at the CDN as opposed to content confidentiality (and unlinkability).  In 2005, 
@@ -31,12 +31,13 @@ or publishers; \system{} is complementary to Stickler.
 20 CDN providers and found that there are many problems with HTTPS practice in CDNs~\cite{liang2014https}.  Some of these 
 problems include: invalid certificates, private key sharing, neglected revocation of stale certificates, and 
 insecure back-end communications; the authors point out that some of these problems are fundamental issues due to 
-the man-in-the-middle characteristic of CDNs.  Similarly, Zolfaghari and Houmansadr found problems with HTTPS usage by 
-CDNBrowsing, a system that relies on CDNs for censorship circumvention~\cite{zolfaghari2016practical}.  They found that HTTPS 
-leaks the identity of the content being accessed, which defeats the purpose of a censorship circumvention tool. Jung et al., show 
+the man-in-the-middle characteristic of CDNs.  %Similarly, Zolfaghari and Houmansadr found problems with HTTPS usage by 
+%CDNBrowsing, a system that relies on CDNs for censorship circumvention~\cite{zolfaghari2016practical}.  They found that HTTPS 
+%leaks the identity of the content being accessed, which defeats the purpose of a censorship circumvention tool. 
+Jung et al., show 
 that some CDNs might not actually provide much defense against flash events~\cite{jung2002flash}.  Recently, researchers have studied the privacy implications of peer-assisted CDNs; peer-assisted CDNs allow clients to cache and distribute 
 content on behalf of a website.  It is starting to be supported by CDNs, such as Akamai, but the design of the paradigm
-makes clients susceptible to privacy attacks; one client can infur the cross site browsing patterns of another client~\cite{jia2016anonymity}.
+makes clients susceptible to privacy attacks; one client can infer the cross site browsing patterns of another client~\cite{jia2016anonymity}.
 
 %Research has also covered other attacks on CDNs; Jung et al., show 
 %that some CDNs might not actually provide much defense against flash events~\cite{jung2002flash}. Su and Kuzmanovic show that some CDNs are more susceptible to intential service 
