--- a/usenixatc/implementation.tex
+++ b/usenixatc/implementation.tex
@@ -11,7 +11,7 @@ and CDN---separately, and how they fit together.
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=.4\textwidth]{implementation}
+\includegraphics[width=.375\textwidth]{implementation2}
 \caption{The implementation of our \system{} prototype.  The solid line represents
 how \system{} communicates between the components; the dotted line represents how 
 a traditional CDN would communicate. $\alpha$ represents the latency between the client 
