--- a/usenixatc/protocol.tex
+++ b/usenixatc/protocol.tex
@@ -1,6 +1,6 @@
 \begin{figure}[t!]
 \centering
-\includegraphics[width=.3\textwidth]{publishing_content_new2}
+\includegraphics[width=.3\textwidth]{publishing_content_new3}
 \caption{Publishing content in \system{}.  $k$ is shared between the 
 origin server and the corresponding exit proxy; the CDN has no knowledge of $k$.}
 \label{fig:publishing}
@@ -53,7 +53,7 @@ certify the exit proxy, then it will send the DNS response with
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=.4\textwidth]{key_lookup}
+\includegraphics[width=.46\textwidth]{key_lookup_2}
 \caption{How an origin server certifies an exit proxy and distributes its shared
 key to an exit proxy.  In step~(1), 
 the exit proxy sends his self-certifying ID in the {\it Additional} section of the DNS message.  }
@@ -118,7 +118,7 @@ added padding, to reconstruct the original content.
 
 \begin{figure}[t!]
 \centering
-\includegraphics[height=5cm,keepaspectratio]{request_diagram_simple}
+\includegraphics[height=4.4cm,keepaspectratio]{request_diagram_simple2}
 \caption{Steps for retrieving content in \system{} when a client is prioritizing 
 performance and goes directly to an exit proxy.}
 \label{fig:retrieving}
